# home-server

./: '  .Audio.c.swp  .HTTP.c.swp  .SQL.h.swp  .User.c.swp  .client.c.swo  .home.html.swp  .index.html.swp  .main.c.swo  .main.c.swp  .socket.c.swp  .studio.html.swp  Audio.c  Audio.h  CMakeLists.txt  FileStorage.c  FileStorage.h  HTTP.c  HTTP.h  README.md  SQL.c  SQL.h  User.c  User.c~  User.h  Users.sql  \  a.out  certificate.pem  certificate_signing_request.csr  client.c  home.html  index.html  main.c  new_user.html  password_hashing.h  privatekey.pem  recordings  route.c  route.h  (+9 more)
Audio/: testAudio.webm
USERS/f434b7e2454ce858e60f587b8d1d27b0/recordings/: Audio_mbcpmkc0ayib1l17f.webm
USERS_test/f434b7e2454ce858e60f587b8d1d27b0/recordings/: Audio_mbcpn5wqw55ap00pf.webm
database/: FileStorage.c  SQL.c  password_hashing.c
models/: .websocket.c.swp  Audio.c  Audio.h  Client_Connection.c  Client_Connection.h  User.c  User.h  client.c  client.h  server.c  server.h  session.c  session.h  websocket.c  websocket.h
routes/: HTTP.c  route.c  route.h
routes/home-server/GET/: get_frame.c  get_frame.h
server/: .socket.c.swp  .socket.h.swp  client.c  client.h  privateKey.key  self_signed_cert.crt  socket.c  socket.h
templates/: data.html  data_table.js  game_of_life.js  home.html  html_utilities.js  index.html  live.html  new_login.html  recordings.html  studio.html  web_audio_api.js  websocket.js
utilities/: http_utilities.c  http_utilities.h  json_utilities.c  json_utilities.h  os_utilities.c  os_utilities.h  string_utilities.c  string_utilities.h
(+502 files in other folders)
